#80 Fix table boundary misalignment
Wrap <legend> element in a containing <div> to allow managable positioning. <legend> isn't supposed to be wrapped in a <div>, but on the other hand <legend> is notoriously difficult to style (or we wouldn't even be having this issue). This fix allows the content in the <legend> to be positioned where we want it and also simplifies the css of the surrounding elements, i.e., the top border of the containing fieldset does not need to be erased, <legend> doesn't require top, left, and right borders, etc.

--- a/swoptact/static/css/swoptact.css
+++ b/swoptact/static/css/swoptact.css
@@ -40,8 +40,6 @@ a:focus,
     text-decoration: none;
 }
 
-/* Push the legend down so it's in the box */
-
 
 /* Try and make the brand fit in with the logo image */
 .navbar-brand,
@@ -90,14 +88,6 @@ a:focus,
     background-color: #FFFFFF;
 }
 
-.change-content fieldset {
-    border-left: 10px solid ##EDDDCF;
-    border-right: 10px solid ##EDDDCF;
-    border-bottom: 10px solid ##EDDDCF;
-
-    margin-bottom: 15px;
-}
-
 .change-content h1 {
     color: #82532E;
     font-size: 18pt;
@@ -121,21 +111,12 @@ a:focus,
 .change-content fieldset {
     padding-top: 5px;
     background-color: #FFFFFF;
-
-    border: 10px;
-    border-style: solid;
-    border-color: #EDDDCF;
-    border-top: 0px;
+    border: 10px solid #EDDDCF;
+    margin-bottom: 15px;
 }
 
 .change-content legend {
-    padding: 5px 15px;
-    border: 10px solid #EDDDCF;
     border-bottom: 0px;
-    background-color: #FFF;
-
-    /* Push the borders out to line up with fieldset borders - is there a better way? */
-    margin-left: -10px;
 }
 
 .table-bordered > thead > tr > th,
